# ChangeLog for app-doc/abs-guide
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/abs-guide/ChangeLog,v 1.91 2013/03/11 00:57:27 dirtyepic Exp $

  11 Mar 2013; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.5.ebuild,
  abs-guide-6.6.ebuild:
  Stabilize (bug #461058). Remove old.

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove redundant maintainer from metadata.

*abs-guide-6.6 (20 Jan 2013)

  20 Jan 2013; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.4.ebuild,
  +abs-guide-6.6.ebuild:
  Version bump. Remove old.

  26 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Maintainer -> app-doc.

  02 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> abs-guide-6.5.ebuild:
  Stable everywhere.

*abs-guide-6.5 (29 Apr 2012)

  29 Apr 2012; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.3.ebuild,
  +abs-guide-6.5.ebuild:
  Version bump.

  02 Jan 2012; Ryan Hill <dirtyepic@gentoo.org> abs-guide-6.4.ebuild:
  Stabilize on all.

*abs-guide-6.4 (31 Aug 2011)

  31 Aug 2011; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.2.ebuild,
  abs-guide-6.3.ebuild, +abs-guide-6.4.ebuild:
  Version bump, remove old. Stabilize previous version everywhere.

*abs-guide-6.3 (16 Jun 2011)

  16 Jun 2011; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.1.ebuild,
  +abs-guide-6.3.ebuild:
  Version bump (bug #369441 by Sebastián Magrí).

  23 Jan 2011; Ryan Hill <dirtyepic@gentoo.org> abs-guide-6.2.ebuild:
  Stabilize for all.

*abs-guide-6.2 (17 Mar 2010)

  17 Mar 2010; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.0.ebuild,
  +abs-guide-6.2.ebuild:
  Version bump.

  08 Nov 2009; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-5.5.ebuild,
  abs-guide-6.0.ebuild, abs-guide-6.1.ebuild:
  Stable on all.

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> abs-guide-6.0.ebuild:
  sparc stable wrt #286602

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> abs-guide-6.0.ebuild:
  Stable for HPPA (bug #286602).
