@@ -3,17 +3,20 @@ Hash: SHA256
 
 DIST abs-guide-6.6.pdf 3348750 SHA256 dc3ab7f8cdd8516e8758dafb943d39ecee6ab289c171507ea4290478749bc970 SHA512 4338edbd19faf256bc857ecbb596f54a05a687583c4cadc76deb97fa50317c58a3b6b7833649b5209b78d32887d08776d8d2e0b0deaaa915e886505b5ead41c1 WHIRLPOOL 777745b854a3c92efaf94c5aa8206a1e19840a78546f39cfb8563015614bee1502f29a20e46510b8307f8f414478937126cd02807ae77cf3a9d3576c85cc9b47
 DIST abs-guide-6.6.tar.bz2 1136823 SHA256 922369ab87545c3ae3118122328508ad201a0893fc09ec474bb88e987777f07a SHA512 506590b8279f6719cbbaa18f4468b1f8b99f9ed3b490475426236fcfcc7a479552c579648d5475e047418de1e56e899288150586bf04ba8e1075a6040f50d7a9 WHIRLPOOL 2dd00b9c8915fa90fae37878c2b651b601a7ee52bd0f1b30dbb49a77574e57a92994e07efa77d6270154c80febb568d30a5110ad28cb51c19553a051aada9662
+DIST abs-guide-final.tar.bz2 1141871 SHA256 c29ffc8721ac2a8e0782bf0518d6a9dbd650f5a3deb00009b825f80f833aa971 SHA512 76c445da6faa47418e50458bf2bfc0b4c34c9efcc93308c39ec880b894d019bf9a1d2f4a8687d14bd9832872b666769f6f7f74c313520e9770f16724eb3adfdd WHIRLPOOL 831e6144ccfafd84725d1b961a9425c2c8bcddf07485453f8ff23cacef1244aa60e5a9532c7156170e617717c4c737fe715a951d7e73d14c5fcc1d79e05da415
+DIST abs-guide.pdf 3358210 SHA256 6fcd205205d5e549d9ed4dc2e9d620f8af5742917c2a718b32f91398f41155cd SHA512 8691ddab583e816ca9f0e42d37d45d8c27e74b5b62a5a951c7fe5830679e9288d4d5f98e7ff0746e2ac71e26322c7dc8250e33128b3e77591a1e48e8d415777c WHIRLPOOL 407a7c24ceaf98a64b721b0f1cca9c22acf115a6c50f47e54af95ddc2511bd1409cd4a88df21dfde88559e7428a413099e0b77986bbe368ace37a754a288ed2c
+EBUILD abs-guide-10.ebuild 978 SHA256 36682ef33e00dfe5f4343af38a6dbda544201459d0f66fa52740bc7ccd1fff27 SHA512 7c2bbdbaef82d29a7ef2fc25cab69e1836673fd9667e9d2fe8910024c1c5dcfebf0ee844c5393a9a27ca4dc3a9c856e494d3f685f0397284ddee67b07b873aaa WHIRLPOOL ccd6f794a7acc516e06edd639c17fc15b369dd28c5cc994be4cd3b6f2dc16b9b627a7db947afcac53d4de1c92dbf91d7c2ae65c4e15c5276a8bcaac58ec0ba4c
 EBUILD abs-guide-6.6.ebuild 934 SHA256 5acbf5baf4b75bad5f6145552180765ce652c529c9a3c55fd2542ee82ad96414 SHA512 0fcb4a74776ca15411555337c806f374c524bfcc733f665d1234c40eb5d61c5414385e92ddf95b44fc1e06305f28a347d5fe5c769eb98c07ad3eade4c597a1fc WHIRLPOOL 9e712f41414493801f4101732ef7602e1946a502c3dfcb670cedcae0377641a4753f1d9c9e489610be27c50b5cb20d00c008b37d9818675d83ad5ed98b196268
-MISC ChangeLog 11326 SHA256 05d63af04e15b4a91d7e53bcf7a62809d6eb8f4608356483f140f67d8f03dbeb SHA512 4f7ac60644214fa6a656c23f737e28f5566327e2b02eb909242e9804dc0cbee5dee170d56558acd2e621314b5dc2255f278f894d0fcef1573fa82da1ca7e3f86 WHIRLPOOL a8c2bf2e56dea831306470f81f9424d6a99d27e4b833402758a3b3e2e9c0dfc808db1b386472287b60a2e8eab77d57a841979dc848344bce07ed50a4e1088776
+MISC ChangeLog 11484 SHA256 4e9e2e416d1d8024c524f9800b7e3cdf42d529baf4152c4756df9b6c01f68d87 SHA512 c0e99fc16d18ef5a7cbf419a7a7c7f5032ff452cf9cb6c9296f5477c237811a852b8a72243dfc8b749b911939d65fe02e29d144ea7e9764b284e440a180ddae4 WHIRLPOOL cd8067409fbfcc4f74831477e3185bb9f0082faceac91a553c6372b13a80fec8ea6e0ff2b1a3c84e3397096e4283b30ad0ad16374b7cf7f58fadbb3e4acf2751
 MISC metadata.xml 160 SHA256 46350a4870aabe21405d09dbf62bb403622d11d6c4cb4a5e75b16928c8f06672 SHA512 45d2262ac6b6ff5582c40cdd27d966440d3898bc4c4658c71ded210c96f672331653312a8648de7f098fbe4c387aff229a41297c8e2b736e18304b6bdef76f02 WHIRLPOOL 1017d8acdd198f4703a56d242d6a98771c7e442290f0a5380d5e1392017f769552d6718768f32f36eabf0e7d92ff4a9cf4c99ce5a925ff005446cbb63fd80ae7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.1
 
-iQEcBAEBCAAGBQJRPS5/AAoJEO04vUmVeoRjVI8IAL+IzQ1cntn6UGT2GLjV6eSs
-Mn+CC8T3qbYEysPCNscY3YMZGqQiTfFbWcPQEje00tcqWuU2viTjhcWV4VNqRPYt
-Qf4pmFy2XUCOnC3J4z46Lv92/6yLIiJo9/qweZoK0w16DyBdk+jOxU1E5WxxMXlw
-3AQGeEBH+XTCEcedp36epZ/OzpcH0d6/HQla3cVpAt/S78fIUqI0Ld64tpt8HD0A
-NIaV9RLQKwKbqlKuwd74Db8kdFY7NHWAz1c8djdS3wE6E/niOskSePuUFGiNolB6
-GqRcNou7chHw6AnL3erJBVqu3MSMA5yjEmobAubSl4FHYbMb/WLpdprfmrnYzw4=
-=8Yv2
+iQEcBAEBCAAGBQJVTFtIAAoJEO04vUmVeoRjXVMH/1/X2Nx2CI+UqMT05VjAGRoI
+P5Y1gi8piWTV+JuuINOxQXWURGxtPVnSPNtMdht7S27/PJG78msl00s5FEpRl6P6
+E++sQ9hbXs+LQlyBKvBiMAzPfdGuQK2mJJ0N5N2Oc9gP9JCG6cEnAuxJFJGdMDD1
+HQA5jDI7pFGDzwKaiveqQmHNYjt+eHpRS0PnXTgpcN3+cau4OuHjW71/XjK6od6l
+ZGilqPNi9krUU5tlwnre2r/b+ycQusl6CNGwi8YIwI81KK9x9/sA3iz7o+ozmAax
+p9tnsMqtZwOUGlIOU9+kI7SemhF/yFFXAMV8MhRmKnOdVGJGzn5TTXgIbxe/E+8=
+=wFvr
 -----END PGP SIGNATURE-----
