@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX PDL-2.4.11-fortran.patch 646 SHA256 0d8fc490aff882053bb5115e155a04c5585ee8c221498f8e361c50ba4d50d794 SHA512 c50d4cf4f141d05b6c5af04a69aea88af1aaa7c9f5005c856e6ec10d106ab0c64cf467d9e05acd4b06f7b100d6b69d2ff57d2f390530ff2850e7fee0d3e36def WHIRLPOOL cc1982fea8551edbd233b95137f3acc9daea5d57828af5e6f4f6b343cca2376bb446de98e5ed07fb61b721fce373b8f2c08114bd37a7d9c94869f72b0b8ef98a
 AUX PDL-2.4.11-shared-fftw.patch 380 SHA256 1ade1e0321b1331e5adfedfcd496ab45258f1c4eb25f98076e84212ed6fc55ff SHA512 714127a82f40de85ef594b163a31a0358e6507efa79497e9eb46b270da8db02fd04a7d8bcf7d68d0456c32276745902e46bd1bf5509f83c66934aad0ab3371f3 WHIRLPOOL c18a65b342d1d854c924a818d07eef6d6a706d7951eb32c06ef4404e53256c5b16ad9aebc2f4cf97534bf946072b0527c46b1155cad70b367f7f3f7969f791f5
@@ -9,25 +9,25 @@ AUX PDL-2.4.3-PIC.patch 358 SHA256 603f9a332db839497e0f32f78698264ac32c2dcc997b4
 AUX PDL-2.4.4-PIC.patch 634 SHA256 df6f9f98bec340ce55b89cb27184ce63b2d4d932f33a50f9f0461ce598386276 SHA512 eb9d163ae0a555bfffd197ef0bf17447259eec5db30db06841332fc4c9dc6b55560a59ee3bc481de9970b7cba5ca62ad8811eb3e40c592ab9dbf70f2c022cd88 WHIRLPOOL 10d63d6a6e06ad383760c1747c62662decc61659003bd65b3cdabf55087ac5d0addcaa4e99b007f6b35d6b878b930278175fb21fee3d7ab632a16e5993f2a7d4
 AUX perldl.conf 2716 SHA256 1a192836f6c1c156ad38a6e6f00478bdb2bccf06054465da4ba95ac3488e0dbc SHA512 ed05b5a5d8014a010093d1c03b90a72bc5629760a71f521988cfeaf70e6b59d9a4bfd8b4533a4dc3bcb46ba6fd3737cd7fb74ec086d3da8aac1b8239fa9ca8e5 WHIRLPOOL 1c6d845a6888c47aac427129d2eb9d8777924f430ec9b20ca8f9ee1b2762b8bccc3485080828a3f5acfd2caec93d3f7fdbd77f16b22ee443e75ea78445e3adbf
 DIST PDL-2.4.11.tar.gz 2859537 SHA256 c777ed2519d73ebde0d870e94931a2d2c57865abcee27dfec53f4412a2cac662 SHA512 014358b7d844a082552782f23d610d62b6f5bf5fccef30dc32ecad665501e278351cf3b33ceafe3387054d2063fc642b7bf56459944ee8c0c3d0d7cef3d78a2b WHIRLPOOL eb6623dce01e0f568ddcd2d399a8ddb394ab839b088347a51c5c73c8cacf91b726cd18f6692e50197ae9040eec9dcb4bc3fa7bb722c66ea316132764d40fa8d4
-EBUILD PDL-2.4.11.ebuild 3413 SHA256 40d813da88ff2f68a76c494001e7881180b72a80d3a0e942fbb62ec944176624 SHA512 88cf3c22bfe97e8e4e9f14956476f66f488722e42ced625b51662247ce2c32fa4490f3262f7045d6432a065af65bd4acb11ecea2cc44d6fc730a4e8eacad6e0f WHIRLPOOL 965e30a7e7fc8987056762f1a0c91f44405196c3f49576ef63ec13e5f9128d8653d2817920acc21f7b7c02e49241b4e73ac1b375e785287ccf40872b049ea19d
-MISC ChangeLog 14661 SHA256 84a829b416b1d4e75cc18041ec6f90dce89abe86bb78f7762ec719b37680fcc5 SHA512 902835fd3042c0cac23e202955255ba23deeefc2010d83218bfff57482aaa9c361a6f0e3565caa26895f71ea78cd8a798d1db965831696d5f3056436e1c09403 WHIRLPOOL ab76bd591e79b8b2c67579dc66b9a7cbc4183ef82b16ce8990edeb764fa4a39a272cff88f6e332f72d9bc8b0783959748d786871b08820bcd0d0944740fd79b0
+EBUILD PDL-2.4.11.ebuild 3538 SHA256 884d2de15f8f207fade9f000109e60f7500273bf9e9e05c539d7d0d73d81bd6f SHA512 fa07ef074ba2ba63d2632dc911f56b8ca95bc001a28d90128e3fc2da6b39c9de2f582171e41a2538a901dfc144551896b548128d88496fb267bbc2a3d7008014 WHIRLPOOL 9cd5a005e37d15e571bd090a2e8a71a755933993e47061f2e6f73538aaf9cb2eb530eec9ce85e78e9a78978d75a7cb9dae0440289cec7f9e85c4d7d3be397535
+MISC ChangeLog 14760 SHA256 947e21d8bc089aa689552860e27f2492cb55e8c0005fd77e0b5a65a8741a80e2 SHA512 f0ae4c58f9cae8b7152779965b6acbdb410a21a2a4eff41372ecb33e0f135246ce30d6f4d270901babe9909229e616e1119b7cc860c16faf9fd89989d096bbf7 WHIRLPOOL 8c0986e1254a1247efe3a580e96583d7ba059149c55abf99fa55c7a6d2449463c96e4e54e8e06d20a3d3041af6359be4d91369aad0c232817091ebfe27366245
 MISC metadata.xml 13938 SHA256 011b360541daa093acedac84116b699368682007fc44b7a5cf7b873d3f75e584 SHA512 f6ebde4b6433db323e2fcf7a8e932dd66cf2c98d4827ed7e91009ab7d3df8cc375fdde355d8d64a47c23a88d34d193d54c8a5b31c2b304dc76f4232f9f79676f WHIRLPOOL 8939ace78952d28d5f3aa79bdee81ae5da4a60a8cb63c0eb3f6989be4431889d4ddfcc56c5bd22a55493543e93bf004375720e4ca21b7679ee89a179bf12bf95
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJUbPB6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcCvoP/0GnfvZ6BitQ8oEipuk/Hg8g
-du7+Ky2fXPVkiNeUtk4/TNtgFQ9Q8dW7wRzabZZ9khEd00dgOYRseJqMdmuY01F8
-tDkM0PHBiYLBH8ZRT2xYfnqwAAilhKavlRB0pNmlprWGqBaqEULQSi3HQkbHl5eJ
-5balSN3BAn+Z4BcG8WBKePu+3nuq0jdsoXkYu+0DvKW3J4Qz2E5xBFTUZXX7wWjH
-TMU/WYdqsKeMKeM4FhohjEVRijTA3yBfx9rxksYdNwG0r4oc26KqFMWuTfiF2VxA
-K2OYkyhHa7hfK1ZrgZ+F7APGcdbfffaXOxnhZhCz3vdqKP1c1EihKScvi26OvFq1
-WK04GvJRY4AplhZ1zrgtHNZw2XMHZf52ax3fj7c77shlwjxhawXYV7NJ8DR6ibZW
-KdYBmRT5qXYL7UoP+L0kIZkkK0eppmGleMyQa6vmO8V/pxo5W7fgBfqId3SJpTex
-iGXpOT0RHqjZOVEsX4LqlpTObKUzN3JOytEbPuC0arKoSSY3eJjatW+k4RrRQbu+
-zFfqrgbfRfUDjhD8hJXVDooBHQi5q7ofNXsqLr/82bv20Xa6nPeBd+N1+ghuPchw
-2xBx0AXosrmFWkNi7VzydBdLcdQgRh7rky/U6RQXYFUuWCbIAn4Dk4/LF/SBCI6m
-ZI0u0EsQ4wPCY1de3Q3l
-=g+4w
+iQJ8BAEBCgBmBQJVTF2OXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirodwP/AndsEMVRw3w1gyS9nOipDVt
+5aN9oPhYKB/yTjSl1mSBBYUUextg23BnovVLe3eOuFKPaZAeffDQipJV75B4kud1
+NH/iwL2Qk3Zuaan+NvHsheM4C9SefF07uLNeOEEw6Y2yMHQ6RukHssd+Wvb1gdO+
+/xysAO8/vejeweorEPS6CcZlJcTfbiKwIuRE6IYm4P19FLNVnqTXzUiB3EhVnjq3
+DBDn9QK5wY+9U27Go4+lUwMUFCd/25KqHOJHLE/JcydAUEN2bBv85boxPTzBh3UQ
+E0eZ0wGiVCcCTZww24CvIL9Lht007h/S/0oIgyuX/HwUfma00jMi2Siullhv6MQz
+hwuopmW6hDiF+i7fWbrw0L0qe40s5Gp90+lWnfsNmjChWjdo0qMaV6c3uUk4N37e
+5r8ZdkcEFvr3kAypaGPauFmrtB8FXXiya0guiSopgNPdGiy7ABHxpETUwSUA3ekV
+EyPbB4BSZljVh9fvT6F5XLyewKf4CryuV/7uytubykVoyifzVtOAEUf0s29hgtuM
+NQFe5hx5bnBSD1726Y9X1nVTPbmDtns6CYBQCL4i2QRfcIeYXZ9U+kmrNnl7MtH1
+g3e0S17wIJnzB7yA7qMUXi6Jl92aHeTtwIzXPKux42UETIJS+TelLgkfQMSz9wmi
+ACtyM/I2QAteG1ogHBCj
+=q7/z
 -----END PGP SIGNATURE-----
