@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/PDL-2.4.11.ebuild,v 1.16 2014/11/19 19:33:13 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PDL/PDL-2.4.11.ebuild,v 1.17 2015/05/08 06:54:05 jlec Exp $
 
 EAPI=5
 
@@ -66,6 +66,12 @@ src_prepare() {
 	epatch "${FILESDIR}"/${PN}-2.4.11-shared-hdf.patch
 	find . -name Makefile.PL -exec \
 		sed -i -e "s|/usr|${EPREFIX}/usr|g" {} \; || die
+
+	if has_version ">=sci-libs/plplot-5.11"; then
+		sed \
+			-e 's:plplotd:plplot:g' \
+			-i Graphics/PLplot/Makefile.PL || die
+	fi
 }
 
 src_configure() {
