@@ -1,0 +1,10 @@
+DEFINED_PHASES=install postinst unpack
+DESCRIPTION=An in-depth exploration of the art of shell scripting
+EAPI=5
+HOMEPAGE=http://www.tldp.org/LDP/abs/html
+IUSE=pdf
+KEYWORDS=alpha amd64 hppa ~mips ppc sparc x86
+LICENSE=public-domain
+SLOT=0
+SRC_URI=http://bash.deta.in/abs-guide-final.tar.bz2 pdf? ( http://bash.deta.in/abs-guide.pdf )
+_md5_=373e8e2e3e7bf55cbd66a5e84c030132
