@@ -1,6 +1,11 @@
 # ChangeLog for app-doc/abs-guide
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/abs-guide/ChangeLog,v 1.91 2013/03/11 00:57:27 dirtyepic Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-doc/abs-guide/ChangeLog,v 1.92 2015/05/08 06:42:11 rhill Exp $
+
+*abs-guide-10 (08 May 2015)
+
+  08 May 2015; Ryan Hill <rhill@gentoo.org> +abs-guide-10.ebuild:
+  Version bump to final release. Change license to public-domain.
 
   11 Mar 2013; Ryan Hill <dirtyepic@gentoo.org> -abs-guide-6.5.ebuild,
   abs-guide-6.6.ebuild:
